--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -1,7 +1,9 @@
 FROM --platform=linux/amd64 ubuntu:22.04 as builder
 
 RUN apt-get update
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential libocct-data-exchange-dev libocct-draw-dev libocct-foundation-dev libocct-modeling-algorithms-dev libocct-modeling-data-dev libocct-ocaf-dev libocct-visualization-dev git cmake gcc g++ libboost-all-dev libcgal-dev
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y libocct-data-exchange-dev libocct-draw-dev libocct-foundation-dev libocct-modeling-algorithms-dev libocct-modeling-data-dev libocct-ocaf-dev libocct-visualization-dev
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y git cmake gcc g++ libboost-all-dev libcgal-dev
 
 COPY . /repo
 WORKDIR /repo/cmake/build
@@ -12,11 +14,14 @@ RUN cmake .. -DCOLLADA_SUPPORT=0 -DMINIMAL_BUILD=ON -DOCC_LIBRARY_DIR=/usr/lib/x
     -DMPFR_INCLUDE_DIR=/usr/include \
     -DGMP_LIBRARY_DIR=/usr/lib/x86_64-linux-gnu \
     -DMPFR_LIBRARY_DIR=/usr/lib/x86_64-linux-gnu \
-    -DHDF5_SUPPORT=Off -DOCC_INCLUDE_DIR=/usr/include/opencascade -DCMAKE_INSTALL_PREFIX=/install
-RUN make -j8
-RUN make install
+    -DHDF5_SUPPORT=Off -DOCC_INCLUDE_DIR=/usr/include/opencascade
+RUN make
+
+RUN mkdir -p /deps
+RUN ldd /repo/cmake/build/IfcConvert | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
 
 FROM ubuntu:22.04 as package
-RUN apt-get update
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y libocct-data-exchange-dev libocct-draw-dev libocct-foundation-dev libocct-modeling-algorithms-dev libocct-modeling-data-dev libocct-ocaf-dev libocct-visualization-dev git libboost-all-dev
-COPY --from=builder /install /install
+
+COPY --from=builder /deps /deps
+COPY --from=builder /repo/cmake/build/IfcConvert /repo/cmake/build/IfcConvert
+ENV LD_LIBRARY_PATH=/deps
